--- a/index.html
+++ b/index.html
@@ -723,17 +723,17 @@
                                 hotels of Bangalore is the premise on which Ticketsque is built.  </p>
                                 <p class="sec7-text2">The UI/UX design and event segmentation are done to enhance user
                                     engagement holistically.  </p>
-                                <h3 class="sec7-know">Know more</h3>
+                                <!-- <h3 class="sec7-know">Know more</h3> -->
                           </div>
                         </div>
                         <div class="sec7-right">
-                            <img src="./assets/allinone.png" alt="Logo 2" />
+                            <img src="./assets/p44.png" alt="Logo 2" />
                         </div>
 
                     </div>
                     <div class="sec7-box2">
                         <div class="sec7-left-1">
-                            <img src="./assets/allinone.png" alt="Logo 2" />
+                            <img src="./assets/p45.png" alt="Logo 2" />
                         </div>
                         <div class="sec7-right-1">
                             <div class="sec7-right-box1">
@@ -742,7 +742,7 @@
                                     manages lakhs of tourists and helps them in their travel plans.  </p>
                                     <p class="sec7-text2">Seekneo has developed a mobile application that aids the traveler in
                                         all his travel plans and facilitates him in his journey. </p>
-                                    <h3 class="sec7-know">Know more</h3>
+                                    <!-- <h3 class="sec7-know">Know more</h3> -->
                               </div>
                         </div>
                     </div>
@@ -754,17 +754,17 @@
                                 devices and GDrive is a challenge.</p>
                                 <p class="sec7-text2">Seekneo has built a mobile application that helps save and secure
                                     photographs and images.  </p>
-                                <h3 class="sec7-know">Know more</h3>
+                                <!-- <h3 class="sec7-know">Know more</h3> -->
                           </div>
                         </div>
                         <div class="sec7-right">
-                            <img src="./assets/allinone.png" alt="Logo 2" />
+                            <img src="./assets/p46.png" alt="Logo 2" />
                         </div>
 
                     </div>
                     <div class="sec7-box2">
                         <div class="sec7-left-1">
-                            <img src="./assets/allinone.png" alt="Logo 2" />
+                            <img src="./assets/p47.png" alt="Logo 2" />
                         </div>
                         <div class="sec7-right-1">
                             <div class="sec7-right-box1">
@@ -774,7 +774,7 @@
                                     application for this purpose is a good help.  </p>
                                     <p class="sec7-text2">Seekneo developed a unique mobile app that has user-friendly and
                                         customer-friendly features. </p>
-                                    <h3 class="sec7-know">Know more</h3>
+                                    <!-- <h3 class="sec7-know">Know more</h3> -->
                               </div>
                         </div>
                     </div>
@@ -784,28 +784,41 @@
                             <h2 class="sec7-title">Enguru Live</h2>
                             <p class="sec7-text1">Lorem ipsum dolor sit amet consectetur. Sit non diam justo fames. Blandit et purus mollis convallis malesuada egestas  </p>
                                 <p class="sec7-text2">Lorem ipsum dolor sit amet consectetur. Sit non diam justo fames. Blandit et purus mollis convallis malesuada egestas  </p>
-                                <h3 class="sec7-know">Know more</h3>
+                                <!-- <h3 class="sec7-know">Know more</h3> -->
                           </div>
                         </div>
                         <div class="sec7-right">
-                            <img src="./assets/allinone.png" alt="Logo 2" />
+                            <img src="./assets/p48.png" alt="Logo 2" />
                         </div>
 
                     </div>
                     <div class="sec7-box2">
                         <div class="sec7-left-1">
-                            <img src="./assets/allinone.png" alt="Logo 2" />
+                            <img src="./assets/p49.png" alt="Logo 2" />
                         </div>
                         <div class="sec7-right-1">
                             <div class="sec7-right-box1">
                                 <h2 class="sec7-title">QRSocial Vendor</h2>
                                 <p class="sec7-text1">Lorem ipsum dolor sit amet consectetur. Sit non diam justo fames. Blandit et purus mollis convallis malesuada egestas  </p>
                                     <p class="sec7-text2">Lorem ipsum dolor sit amet consectetur. Sit non diam justo fames. Blandit et purus mollis convallis malesuada egestas  </p>
-                                    <h3 class="sec7-know">Know more</h3>
+                                    <!-- <h3 class="sec7-know">Know more</h3> -->
                               </div>
                         </div>
                     </div>
+                    <div class="sec7-box1">
+                        <div class="sec7-left">
+                            <div class="sec7-left-box1">
+                            <h2 class="sec7-title">Newsplus 21</h2>
+                            <p class="sec7-text1">Lorem ipsum dolor sit amet consectetur. Sit non diam justo fames. Blandit et purus mollis convallis malesuada egestas  </p>
+                                <p class="sec7-text2">Lorem ipsum dolor sit amet consectetur. Sit non diam justo fames. Blandit et purus mollis convallis malesuada egestas  </p>
+                                <!-- <h3 class="sec7-know">Know more</h3> -->
+                          </div>
+                        </div>
+                        <div class="sec7-right">
+                            <img src="./assets/p50.png" alt="Logo 2" />
+                        </div>
 
+                    </div>
                     <div class="proj-btn">
                         <!-- <button class="btn-prj">
                             Refer our projects <img class="bttn-pic" src="assets/uil_arrow-up.png" alt="arrow-up" />
@@ -1537,7 +1550,7 @@
         <h2 class="sec17-heading">Seekneo embraces the best available technology</h2>
     <p class="sec17-text">By deploying technologies that work, Seekneo fulfills its obligation of
         delivering a quality project. </p>
-    <button class="btn17-sec17"><p class="btn-sec17">Get Started</p> 
+    <!-- <button class="btn17-sec17"><p class="btn-sec17">Get Started</p>  -->
         <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
         <rect x="0.5" y="0.5" width="19" height="19" rx="9.5" stroke="black"/>
         <path d="M14.0211 12.7727L13.798 7.10815C13.7915 7.00261 13.7643 6.89775 13.7179 6.79958C13.629 6.60182 13.4682 6.44104 13.2705 6.35212C13.1723 6.30574 13.0675 6.27855 12.9619 6.27209L7.29738 6.04892C7.19175 6.04476 7.08797 6.06145 6.99198 6.09803C6.89598 6.1346 6.80964 6.19036 6.73789 6.26211C6.59299 6.40701 6.5163 6.60827 6.52471 6.8216C6.53311 7.03493 6.62592 7.24286 6.78271 7.39965C6.9395 7.55644 7.14743 7.64925 7.36076 7.65765L11.0935 7.79906L6.41933 12.4732C6.27502 12.6175 6.19864 12.8179 6.20701 13.0304C6.21539 13.2429 6.30781 13.4499 6.46396 13.6061C6.62012 13.7623 6.8272 13.8547 7.03966 13.863C7.25212 13.8714 7.45256 13.795 7.59687 13.6507L12.271 8.9766L12.4124 12.7093C12.4161 12.815 12.4408 12.9206 12.4849 13.02C12.529 13.1194 12.5918 13.2106 12.6695 13.2883C12.7472 13.366 12.8384 13.4287 12.9378 13.4729C13.0371 13.517 13.1427 13.5416 13.2485 13.5454C13.3542 13.55 13.4582 13.5336 13.5544 13.4972C13.6506 13.4607 13.7371 13.405 13.809 13.3332C13.8808 13.2613 13.9365 13.1748 13.9729 13.0786C14.0094 12.9824 14.0257 12.8785 14.0211 12.7727Z" fill="#16121E"/>
@@ -1639,7 +1652,7 @@
     <div class="sec14-frist">
     <div class="sec14-textcontent">
     <p class="sec14-text">Get in touch with us.</p>
-    <h2 class="sec14-heading">Here to guide you thoroughly..</h2>
+    <h2 class="sec14-heading">Here to guide you thoroughly</h2>
     </div>
     <div class="sec14-iconcontent">
         <img src="./assets/fb.svg" alt="Logo 2" /> 
