--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
                         <img src="assets/logo2.png" alt="Logo">
                     </div>
                     <ul class="nav-links">
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Services</a></li>
-                        <li><a href="#">Our Projects</a></li>
-                        <li><a href="#">Contact Us</a></li>
+                        <li><a  href="#section11">About</a></li>
+                        <li><a href="#section12">Services</a></li>
+                        <li><a href="#section7">Our Projects</a></li>
+                        <li><a href="#section14">Contact Us</a></li>
                     </ul>
                     <div class="box2">
-                    <a href="#" class="call-us-button">Call Us <span><svg width="21" height="22" viewBox="0 0 21 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <a href="tel:+91 8050717122" style="text-decoration: none;" class="call-us-button">Call Us <span><svg width="21" height="22" viewBox="0 0 21 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <rect x="0.5" y="1" width="20" height="20" rx="10" stroke="white"/>
                         <path d="M14.5211 13.7727L14.298 8.10815C14.2915 8.00261 14.2643 7.89775 14.2179 7.79958C14.129 7.60182 13.9682 7.44104 13.7705 7.35212C13.6723 7.30574 13.5675 7.27855 13.4619 7.27209L7.79738 7.04892C7.69175 7.04476 7.58797 7.06145 7.49198 7.09803C7.39598 7.1346 7.30964 7.19036 7.23789 7.26211C7.09299 7.40701 7.0163 7.60827 7.02471 7.8216C7.03311 8.03493 7.12592 8.24286 7.28271 8.39965C7.4395 8.55644 7.64743 8.64925 7.86076 8.65765L11.5935 8.79906L6.91933 13.4732C6.77502 13.6175 6.69864 13.8179 6.70701 14.0304C6.71539 14.2429 6.80781 14.4499 6.96396 14.6061C7.12012 14.7623 7.3272 14.8547 7.53966 14.863C7.75212 14.8714 7.95256 14.795 8.09687 14.6507L12.771 9.9766L12.9124 13.7093C12.9161 13.815 12.9408 13.9206 12.9849 14.02C13.029 14.1194 13.0918 14.2106 13.1695 14.2883C13.2472 14.366 13.3384 14.4287 13.4378 14.4729C13.5371 14.517 13.6427 14.5416 13.7485 14.5454C13.8542 14.55 13.9582 14.5336 14.0544 14.4972C14.1506 14.4607 14.2371 14.405 14.309 14.3332C14.3808 14.2613 14.4365 14.1748 14.4729 14.0786C14.5094 13.9824 14.5257 13.8785 14.5211 13.7727Z" fill="white"/>
                         </svg></span></a>
@@ -744,7 +744,7 @@
             <!-- container-7 section-7 -->
              <div class="sub-two-container">
        
-            <div class="section7">
+            <div class="section7" id="section7">
                 <h2 class="sec7-heading">Project demonstrations to prove our worth</h2>
                 <p class="sec7-text">Lorem ipsum dolor sit amet consectetur. Sit non diam justo fames. Blandit et purus mollis convallis malesuada egestas risus quam enim. Semper lorem rhoncus et felis tristique tellus volutpat orci. Dui elementum a sed</p>
                 <div class="sec7-component">
@@ -1596,7 +1596,8 @@
                 </div>
             <!-- container-11 section-11 -->
 
-            <div class="section11">
+            <div class="section11" id="section11">
+
                 <div class="sec11-frist">
                     <h4 class="sec11-heading">Choose us for the following qualities</h4>
                     <p class="sec11-text">Seekneo has the best talent pool in the industry, they have a collective experience that exceeds the industry standards. Quality approach and delivery have been the highest features in all the projects.</p>
@@ -1656,7 +1657,7 @@
                 </div>
            <!-- 12 section 12 container -->
 
-           <div class="section12">
+           <div id="section12" class="section12" >
             <h2 class="sec12-heading">Seekneo’s other services</h2>
         <p class="sec12-text">Seekneo can help you to build website that is modern, clean, user friendly and SEO optimized which drives results.</p>
         <!-- <button class="btn12-sec12"><p class="btn-sec12">Get Started</p>  -->
@@ -1923,7 +1924,7 @@
  </div>
  <!-- faq Ends-->
 
- <div class="section14">
+ <div id="section14" class="section14" >
     <div class="sec14-frist">
     <div class="sec14-textcontent">
     <p class="sec14-text">Get in touch with us.</p>
