--- a/index.html
+++ b/index.html
@@ -2329,7 +2329,8 @@ enquiryForm.classList.toggle('hidden');
 flatpickr("#datePicker", {
     enableTime: true, // Enables time selection
     dateFormat: "Y-m-d H:i", // Date format with time
-    time_24hr: true // 24-hour time format
+    time_24hr: true, // 24-hour time format
+    disableMobile: true
 });
 </script>
 
