--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>seeckneo mobile page</title>
+    <meta name="description" content="Looking for the best mobile app development company in Bangalore? SeekNeo delivers innovative and customized mobile application solutions to meet your business needs. Partner with us for expert driven, cutting edge app development.">
+    <meta name="keywords" content="Mobile App Development Companies in Bangalore, App Development Company Bangalore, Mobile Application Development Companies in Bangalore, Mobile Development Companies in Bangalore, and Mobile Development Company Bangalore.">
+    <link rel="canonical" href="https://seekneo.com/mobile-app-development-company-in-bangalore/">
+    <title>Mobile App Development Companies in Bangalore | Mobile  App Development Company in Bangalore | Seekneo</title>
     <link rel="stylesheet" href="styles.css">
     
     <!-- Link the Google Font -->
@@ -19,6 +22,9 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 </head>
 <body>
+    <header>
+        <h1>Mobile App Development Companies in Bangalore</h1>
+    </header>
     <div class="container">
         <div class="section1">
             <nav class="navbar">
@@ -65,7 +71,7 @@
                 <img src="assets/Rectangle70.png" alt="Review">
             </div>
             <div class="Rimg5">
-               <h1 class="Rnum">475+</h1>
+               <h2 class="Rnum">475+</h2>
             </div>
             </div>
           <h4 class="creation">Elevate the design and communications to the next level.</h4>
