--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
                 <img src="assets/Rectangle70.png" alt="Review">
             </div>
             <div class="Rimg5">
-               <h2 class="Rnum">475+</h2>
+               <h2 class="Rnum">425+</h2>
             </div>
             </div>
           <h4 class="creation">Prestigious<span class="big1"> #Apps </span>  Development Company </h4>
           <h4 class="subheading">Drive Innovation with Custom Mobile App Development by Seekneo</h4>
-          <h4 class="friendly">Blend the best of design and communication on the mobile screen,
-            making the buying process seamless to the core. </h4>
+          <h4 class="friendly">SeekNeo stands out as one of the top mobile app development companies in Bangalore. With a team of skilled developers, we specialize in creating innovative, user-friendly, and high-performance mobile apps tailored to meet your business goals. Whether you're looking for Android, iOS, or cross-platform app solutions, we deliver exceptional results that drive growth and engagement.
+        </h4>
           <div class="two-btn-sec1">
             <button class="btn-two-sec1"  onclick="openPopup()"> <p class="ptag-1">Enquiry Now </p><svg width="18" height="14" viewBox="0 0 18 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M10.6667 1.1665L16.5 6.99984M16.5 6.99984L10.6667 12.8332M16.5 6.99984H1.5" stroke="white" stroke-width="1.90476" stroke-linecap="round" stroke-linejoin="round"/>
